@@ -3,8 +3,8 @@ TEMPDIR    ?= /tmp
 
 INSTALLDIR ?= /usr/local
 TARGET     ?= lib/libmathplot.a
-DEBUGFLAGS  = -g -ggdb -Wall -pedantic
-CXXFLAGS   += `wx-config --cxxflags`
+DEBUGFLAGS  = -g -ggdb -Wall
+CXXFLAGS   += -Wall -pedantic `wx-config --cxxflags`
 LINKFLAGS  += `wx-config --libs`
 SOURCES     = mathplot.cpp
 HEADERS     = mathplot.h
